# apiAutoTest

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  conftest.py  debugtalk.py  pyproject.toml  pytest.ini  requirements.txt  run.py
api/pda/: pick_api.yaml
api/rms/: login.yaml  task_api.yaml
api/rms/warehouse_manage/: warehouse_add.yaml  warehouse_list.yaml  warehouse_remove.yaml  (+1 more)
api/wms/: login.yaml  order_api.yaml
config/: env.dev.yaml  env.test.yaml  settings.py
core/: asserter.py  cache_mgr.py  client.py  db_manager.py  exceptions.py  models.py  parser.py
core/scenario/: __init__.py  scenario_runner.py  yaml_scenario_loader.py
data/: base_materials.csv
enums/: __init__.py  allure_severity_type.py  assert_type.py  case_data_type.py  email_type.py  query_fetch_type.py  setup_type.py  sql_type.py  teardown_type.py  var_type.py
enums/request/: __init__.py  auth.py  body.py  engine.py  method.py
extensions/: __init__.py  common_funcs.py  pda_funcs.py  rms_funcs.py  wms_funcs.py
testcases/: template_api.yaml  template_flow.yaml  test_scenarios.py
utils/: helpers.py  logger.py
utils/allure_manage/: __init__.py  allure_report_manager.py  env_info.py
utils/data_manage/: __init__.py  apifox.py  hub_test_import.py  importer_common.py  postman.py
utils/file_manage/: __init__.py  file_finder.py  path_manager.py  yaml_handler.py
utils/parsing_manage/: __init__.py  hook_executor.py  pydantic_error_formatter.py  variable_extractor.py
utils/reporting_manage/: __init__.py  report_notifier.py  send_dingding.py  send_email.py
(+4 files in other folders)
